--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # Para que JPA cree/update las tablas automáticamente en desarrollo
 
